# splitmix-distributions

./: ChangeLog.md  LICENSE  README.md  splitmix-distributions.cabal  stack.yaml
.github/workflows/: ci.yaml
src/System/Random/SplitMix/: Distributions.hs
test/System/Random/SplitMix/: DistributionsSpec.hs
