name:           splitmix-distributions
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/ocramz/splitmix-distributions#readme>
homepage:       https://github.com/ocramz/splitmix-distributions#readme
bug-reports:    https://github.com/ocramz/splitmix-distributions/issues
author:         Marco Zocca
maintainer:     ocramz
copyright:      2021 Marco Zocca
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version: 1.12
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/ocramz/splitmix-distributions

library
  exposed-modules:
      System.Random.SplitMix.Distributions
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , erf
    , mtl
    , splitmix
    , transformers
  default-language: Haskell2010

test-suite splitmix-distributions-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , erf
    , hspec
    , mtl
    , splitmix
    , splitmix-distributions
    , transformers
  default-language: Haskell2010
